--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+.settings
 .vs
 .vscode
 cmake
+Debug
+Drivers
+.cproject
+.project
 CMakeLists.txt
 CMakePresets.json
 vcpkg-configuration.json
-Debug
-.Ds_Store
