--- a/.cproject
+++ b/.cproject
@@ -41,6 +41,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MPU}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MOTOR}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/ENCODER}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MOTION}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.361426192" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -69,6 +70,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MPU}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MOTOR}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/ENCODER}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MOTION}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1366944359" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -168,6 +170,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MPU}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MOTOR}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/ENCODER}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MOTION}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.511400582" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -195,6 +198,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MPU}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MOTOR}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/ENCODER}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Rosmsater/BSP/MOTION}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.638029322" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
